--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
           <a class="mr-5 hover:text-gray-900">First Link</a>
           <a class="mr-5 hover:text-gray-900">Second Link</a>
           <a class="mr-5 hover:text-gray-900">Third Link</a>
-          <a class="hover:text-gray-900">Fourth Link</a>
+          <a class="hover:text-gray-900" href="/admin">Admin</a>
         </nav>
         <a class="flex order-first lg:order-none lg:w-1/5 title-font font-medium items-center text-gray-900 lg:items-center lg:justify-center mb-4 md:mb-0">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-purple-500 rounded-full" viewBox="0 0 24 24">
             <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
           </svg>
-          <span class="ml-3 text-xl">tailblocks</span>
+          <span class="ml-3 text-xl">Hi everyone</span>
         </a>
         <div class="lg:w-2/5 inline-flex lg:justify-end ml-5 lg:ml-0">
           <button class="inline-flex items-center bg-gray-200 border-0 py-1 px-3 focus:outline-none hover:bg-gray-300 rounded text-base mt-4 md:mt-0">Button
